kubernetes/yml/polaris/icom/ingress/id-ingress_polaris.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id
  namespace: pilot-polaris
spec:
  ingressClassName: nginx
  rules:
  - host: polaris.146.124.106.181.nip.io
    http:
      paths:
      - path: /sphinx/id
        backend:
          serviceName: id-service-polaris
          servicePort: 8089
