kubernetes/yml/polaris/icom/ingress/interactive-dashboards-ingress_polaris.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interactive-dashboards
  namespace: pilot-polaris
spec:
  ingressClassName: nginx
  rules:
  - host: polaris.146.124.106.181.nip.io
    http:
      paths:
      - path: /interactive-dashboards
        pathType: Prefix
        backend:
          service:
            name: interactive-dashboards-polaris 
            port: 
              number: 3000
